Add link to notebook on GitHub and update org name

--- a/leopard-lives-matter/index.html
+++ b/leopard-lives-matter/index.html
@@ -13077,9 +13077,10 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Leopard-Lives-Matter">Leopard Lives Matter<a class="anchor-link" href="#Leopard-Lives-Matter">&#182;</a></h1><h3 id="or-Hunting-the-Hunter">or Hunting the Hunter<a class="anchor-link" href="#or-Hunting-the-Hunter">&#182;</a></h3><p>Just like in real life, leopards are threatened species in EVE Online. Especially those in Jita:</p>
+<h1 id="Leopard-Lives-Matter">Leopard Lives Matter<a class="anchor-link" href="#Leopard-Lives-Matter">&#182;</a></h1><h3 id="or-Hunting-the-Hunter">or Hunting the Hunter<a class="anchor-link" href="#or-Hunting-the-Hunter">&#182;</a></h3><p>(the latest version of this notebook is available <a href="https://github.com/neiwpuse/leopard-lives-matter/blob/main/Leopard%20Lives%20Matter.ipynb">here</a>)</p>
+<p>Just like in real life, leopards are threatened species in EVE Online. Especially those in Jita:</p>
 <p><img src="poached.png" alt="Poached"></p>
-<p>There is a poacher who specialises in smartbombing to death Leopards in warp. We the people of Preservation of Endangered Species of New Eden (PESNE) cannot accept such an atrocious and unlawful behaviour and need to do something. Protest, maybe? Or bump the hell out of the poacher (a CODE. agent, no less)... But first, we need to find her.</p>
+<p>There is a poacher who specialises in smartbombing to death Leopards in warp. We the people of New Eden's Institute for Wildlife Preservation, Useless Science, and Engingeering (NEIWPUSE) cannot accept such an atrocious and unlawful behaviour and need to do something. Protest, maybe? Or bump the hell out of the poacher (a CODE. agent, no less)... But first, we need to find her.</p>
 <p>We'll do that using some Python 3 with Pandas, scikit-learn, Matplotlib, and Requests. If you are running this notebook, chances are you already have all those installed.</p>
 
 </div>
